Updated backend and fixed overflow issue

--- a/job-tracker-frontend/src/styles/globals.scss
+++ b/job-tracker-frontend/src/styles/globals.scss
@@ -370,7 +370,7 @@ body {
       border-radius: 3px;
       // margin-bottom: 40px;
       background-color: white;
-      overflow: hidden;
+      overflow: auto;
       margin: 10px 0;
       height: 45px;
 
